0.5.2/alltypes/index.md


### All Types

| Name | Summary |
|---|---|
| [io.gladed.watchable.Bindable](../io.gladed.watchable/-bindable/index.md) | An object whose contents are updated automatically when another object changes. |
| [io.gladed.watchable.Change](../io.gladed.watchable/-change.md) | Describes a change to an object of type [T](../io.gladed.watchable/-change.md#T). |
| [kotlin.collections.Collection](../io.gladed.watchable/kotlin.collections.-collection/index.md) (extensions in package io.gladed.watchable) |  |
| [kotlinx.coroutines.CoroutineScope](../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/index.md) (extensions in package io.gladed.watchable) |  |
| [io.gladed.watchable.ListChange](../io.gladed.watchable/-list-change/index.md) | Describes a change to a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html). |
| [kotlin.collections.Map](../io.gladed.watchable/kotlin.collections.-map/index.md) (extensions in package io.gladed.watchable) |  |
| [io.gladed.watchable.MapChange](../io.gladed.watchable/-map-change/index.md) | Describes a change to a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html). |
| [io.gladed.watchable.ReadOnlyWatchableList](../io.gladed.watchable/-read-only-watchable-list/index.md) | A list which cannot be modified externally, but may be watched for changes. |
| [io.gladed.watchable.ReadOnlyWatchableMap](../io.gladed.watchable/-read-only-watchable-map.md) | A map which cannot be modified externally, but may be watched for changes. |
| [io.gladed.watchable.ReadOnlyWatchableSet](../io.gladed.watchable/-read-only-watchable-set.md) | An set which cannot be modified externally, but may be watched for changes. |
| [io.gladed.watchable.ReadOnlyWatchableValue](../io.gladed.watchable/-read-only-watchable-value/index.md) | A value which may not be modified externally but may still be watched for changes. |
| [io.gladed.watchable.SetChange](../io.gladed.watchable/-set-change/index.md) | Describes a change to a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html). |
| [io.gladed.watchable.ValueChange](../io.gladed.watchable/-value-change/index.md) | Describes a change to a value. |
| [io.gladed.watchable.Watchable](../io.gladed.watchable/-watchable/index.md) | An object wrapping type [T](../io.gladed.watchable/-watchable/index.md#T) which can be watched for changes of type [C](../io.gladed.watchable/-watchable/index.md#C). |
| [io.gladed.watchable.WatchableList](../io.gladed.watchable/-watchable-list/index.md) | A [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) whose contents may be watched for changes. |
| [io.gladed.watchable.WatchableMap](../io.gladed.watchable/-watchable-map/index.md) | A [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) whose contents may be watched for changes. |
| [io.gladed.watchable.WatchableSet](../io.gladed.watchable/-watchable-set/index.md) | A [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) whose contents may be watched for changes. |
| [io.gladed.watchable.WatchableValue](../io.gladed.watchable/-watchable-value/index.md) | A wrapper for a value which may be watched for changes. |
